bar chart component and example added, bettered the main page

--- a/src/docz/AreaChart.mdx
+++ b/src/docz/AreaChart.mdx
@@ -1,12 +1,12 @@
 ---
-name: Keepfy React Charts
-route: /
+name: Keepfy Area Charts
+route: /areachart
 ---
 
 import AreaChart from '../core/AreaChart'
 import { Playground } from 'docz'
 
-# Keepfy React Charts
+# Area Chart Examples
 
 ## Demo
 <Playground>
