added horizontal bar chart, needs better code

--- a/src/docz/AreaChart.mdx
+++ b/src/docz/AreaChart.mdx
@@ -14,7 +14,7 @@ import { Playground } from 'docz'
         color='#74007c'
         xType='time'
         yType='time'
-        tooltip={ { label: 'Data', result: 'MTBF' } }
+        tooltip={ { label: 'Equipamento', result: 'Confiabilidade' } }
         data={ 
             [ 
                 { label: '2019-01-01', result: 1 }, 
