allowed the fixed line to goal on area chart

--- a/src/docz/BarChart.mdx
+++ b/src/docz/BarChart.mdx
@@ -11,7 +11,7 @@ import { Playground } from 'docz'
 ## Demo
 <Playground>
     <BarChart
-        percentValue
+        xComplement='%'
         color='#8BC34A'
         tooltip={ { label: 'Equipamento', result: 'Confiabilidade' } }
         data={ 
@@ -22,7 +22,7 @@ import { Playground } from 'docz'
                 { label: 'equipment 04', result: 20 },
                 { label: 'equipment 05', result: 40 },
                 { label: 'equipment 06', result: 50 },
-                { label: 'equipment 07', result: 1 },
+                { label: 'equipment 07', result: 15 },
                 { label: 'equipment 08', result: 70 },
                 { label: 'equipment 09', result: 80 },
                 { label: 'equipment 10', result: 99 }
