--- a/src/docz/AreaChart.mdx
+++ b/src/docz/AreaChart.mdx
@@ -13,11 +13,38 @@ import { Playground } from 'docz'
     <AreaChart 
         color='#74007c'
         xType='time'
-        yType='time'
-        tooltip={ { label: 'Equipamento', result: 'Confiabilidade' } }
+        lineMarkValue={ 3 }
+        lineMarkColor='orange'
+        lineMakeName='mark'
+        yComplement='%'
+        tooltipComplement='aaa'
+        tooltip={ { label: 'Data', result: 'MTBF' } }
         data={ 
             [ 
                 { label: '2019-01-01', result: 1 }, 
+                { label: '2019-02-01', result: 4 },
+                { label: '2019-03-01', result: 3 }, 
+                { label: '2019-04-01', result: 2 },
+                { label: '2019-05-01', result: 4 },
+                { label: '2019-06-01', result: 5 },
+                { label: '2019-07-01', result: 3 },
+                { label: '2019-08-01', result: 7 },
+                { label: '2019-09-01', result: 8 },
+                { label: '2019-10-01', result: 9 },
+            ] 
+        }
+    />
+</Playground>
+
+<Playground>
+    <AreaChart 
+        color='#74007c'
+        xType='time'
+        yType='time'
+        tooltip={ { label: 'Data', result: 'MTBF' } }
+        data={ 
+            [ 
+                { label: '2019-01-01', result: 1.8 }, 
                 { label: '2019-02-01', result: 4 },
                 { label: '2019-03-01', result: 3 }, 
                 { label: '2019-04-01', result: 2 },
