--- a/src/docz/AreaChart.mdx
+++ b/src/docz/AreaChart.mdx
@@ -1,23 +1,23 @@
 ---
-name: Keepfy Area Charts
+name: Area charts
 route: /areachart
 ---
 
 import AreaChart from '../core/AreaChart'
 import { Playground } from 'docz'
 
-# Area Chart Examples
+# Area chart example
 
 ## Demo
 <Playground>
     <AreaChart 
-        color='#74007c'
+        color='#3e2723'
         xType='time'
         lineMarkValue={ 3 }
-        lineMarkColor='orange'
+        lineMarkColor='#E65100'
         lineMakeName='mark'
         yComplement='%'
-        tooltipComplement='aaa'
+        tooltipComplement='goals'
         tooltip={ { label: 'Data', result: 'MTBF' } }
         data={ 
             [ 
