--- a/src/docz/HorizontalBarChart.mdx
+++ b/src/docz/HorizontalBarChart.mdx
@@ -1,16 +1,16 @@
 ---
-name: Keepfy Bar Chart
-route: /barchart
+name: Horizontal bar charts
+route: /horizontal-barchart
 ---
 
-import BarChart from '../core/BarChart'
+import HorizontalBarChart from '../core/HorizontalBarChart'
 import { Playground } from 'docz'
 
-# Bar Chart Example
+# horizontal bar chart example
 
 ## Demo
 <Playground>
-    <BarChart
+    <HorizontalBarChart
         xComplement='%'
         color='#8BC34A'
         tooltip={ { label: 'Equipamento', result: 'Confiabilidade' } }
