--- a/src/docz/StackedBarChart.mdx
+++ b/src/docz/StackedBarChart.mdx
@@ -20,6 +20,14 @@ import { Playground } from 'docz'
             } }
         data={ 
             [
+                [
+                    { label: '2019-01-01', result: 1 }, 
+                    { label: '2019-02-01', result: 2 },
+                    { label: '2019-03-01', result: 4 }, 
+                    { label: '2019-04-01', result: 5 },
+                    { label: '2019-05-01', result: 6 },
+                    { label: '2019-06-01', result: 7 }
+                ],
                 [ 
                     { label: '2019-01-01', result: 10 }, 
                     { label: '2019-02-01', result: 40 },
@@ -29,20 +37,54 @@ import { Playground } from 'docz'
                     { label: '2019-06-01', result: 50 },
                 ],
                 [
-                    { label: '2019-01-01', result: 1 }, 
-                    { label: '2019-02-01', result: 2 },
-                    { label: '2019-03-01', result: 4 }, 
-                    { label: '2019-04-01', result: 5 },
-                    { label: '2019-05-01', result: 6 },
-                    { label: '2019-06-01', result: 7 }
-                ],
-                [
                     { label: '2019-01-01', result: 11 }, 
                     { label: '2019-02-01', result: 42 },
                     { label: '2019-03-01', result: 54 }, 
                     { label: '2019-04-01', result: 55 },
                     { label: '2019-05-01', result: 66 },
                     { label: '2019-06-01', result: 87 }
+                ],
+            ]
+        }
+    />
+</Playground>
+
+<Playground>
+    <StackedBarChart
+        yComplement='money'
+        colors={ ['#487086', '#87C4CB', '#E97551'] }
+        secondYAxisType='percent'
+        tooltip={ { 
+            label: 'Equipamento', 
+            topResult: 'Aquisição',
+            bottomResult: 'Manutenção',
+            lineResult: 'Custo % acumulado' 
+            } }
+        data={ 
+            [
+                [
+                    { label: 'Equipament 01', result: 1 }, 
+                    { label: 'Equipament 02', result: 2 },
+                    { label: 'Equipament 03', result: 4 }, 
+                    { label: 'Equipament 04', result: 5 },
+                    { label: 'Equipament 05', result: 6 },
+                    { label: 'Equipament 06', result: 7 }
+                ],
+                [ 
+                    { label: 'Equipament 01', result: 10 }, 
+                    { label: 'Equipament 02', result: 40 },
+                    { label: 'Equipament 03', result: 30 }, 
+                    { label: 'Equipament 04', result: 20 },
+                    { label: 'Equipament 05', result: 40 },
+                    { label: 'Equipament 06', result: 50 },
+                ],
+                [
+                    { label: 'Equipament 01', result: 11 }, 
+                    { label: 'Equipament 02', result: 42 },
+                    { label: 'Equipament 03', result: 54 }, 
+                    { label: 'Equipament 04', result: 55 },
+                    { label: 'Equipament 05', result: 66 },
+                    { label: 'Equipament 06', result: 87 }
                 ],
             ]
         }
