vertical bar chart added, fixes on tooltips

--- a/src/docz/StackedBarChart.mdx
+++ b/src/docz/StackedBarChart.mdx
@@ -62,87 +62,10 @@ import { Playground } from 'docz'
             lineResult: 'Custo % acumulado',
             complement: 'Custo total'
             } }
-        data={ 
-            [
-                [
-                    { label: 'Equipment 01', result: 1 }, 
-                    { label: 'Equipment 02', result: 2 },
-                    { label: 'Equipment 03', result: 4 }, 
-                    { label: 'Equipment 04', result: 5 },
-                    { label: 'Equipment 05', result: 6 },
-                    { label: 'Equipment 06', result: 7 },
-                    { label: 'Equipment 07', result: 1 }, 
-                    { label: 'Equipment 08', result: 2 },
-                    { label: 'Equipment 09', result: 4 }, 
-                    { label: 'Equipment 10', result: 5 },
-                    { label: 'Equipment 11', result: 6 },
-                    { label: 'Equipment 12', result: 7 },
-                    { label: 'Equipment 13', result: 1 }, 
-                    { label: 'Equipment 14', result: 2 },
-                    { label: 'Equipment 15', result: 4 }, 
-                    { label: 'Equipment 16', result: 5 },
-                    { label: 'Equipment 17', result: 6 },
-                    { label: 'Equipment 18', result: 7 },
-                    { label: 'Equipment 19', result: 1 }, 
-                    { label: 'Equipment 20', result: 2 },
-                    { label: 'Equipment 21', result: 4 }, 
-                    //{ label: 'Equipment 22', result: 5 },
-                    //{ label: 'Equipment 23', result: 6 },
-                    //{ label: 'Equipment 24', result: 7 }
-                ],
-                [ 
-                    { label: 'Equipment 01', result: 10 }, 
-                    { label: 'Equipment 02', result: 40 },
-                    { label: 'Equipment 03', result: 30 }, 
-                    { label: 'Equipment 04', result: 20 },
-                    { label: 'Equipment 05', result: 40 },
-                    { label: 'Equipment 06', result: 50 },
-                    { label: 'Equipment 07', result: 10 }, 
-                    { label: 'Equipment 08', result: 20 },
-                    { label: 'Equipment 09', result: 40 }, 
-                    { label: 'Equipment 10', result: 50 },
-                    { label: 'Equipment 11', result: 60 },
-                    { label: 'Equipment 12', result: 70 },
-                    { label: 'Equipment 13', result: 10 }, 
-                    { label: 'Equipment 14', result: 20 },
-                    { label: 'Equipment 15', result: 40 }, 
-                    { label: 'Equipment 16', result: 50 },
-                    { label: 'Equipment 17', result: 60 },
-                    { label: 'Equipment 18', result: 70 },
-                    { label: 'Equipment 19', result: 10 }, 
-                    { label: 'Equipment 20', result: 20 },
-                    { label: 'Equipment 21', result: 40 }, 
-                    //{ label: 'Equipment 22', result: 50 },
-                    //{ label: 'Equipment 23', result: 60 },
-                    //{ label: 'Equipment 24', result: 70 }
-                ],
-                [
-                    { label: 'Equipment 01', result: 11 }, 
-                    { label: 'Equipment 02', result: 42 },
-                    { label: 'Equipment 03', result: 54 }, 
-                    { label: 'Equipment 04', result: 55 },
-                    { label: 'Equipment 05', result: 66 },
-                    { label: 'Equipment 06', result: 87 },
-                    { label: 'Equipment 07', result: 90 }, 
-                    { label: 'Equipment 08', result: 90 },
-                    { label: 'Equipment 09', result: 90 }, 
-                    { label: 'Equipment 10', result: 90 },
-                    { label: 'Equipment 11', result: 90 },
-                    { label: 'Equipment 12', result: 90 },
-                    { label: 'Equipment 13', result: 90 }, 
-                    { label: 'Equipment 14', result: 90 },
-                    { label: 'Equipment 15', result: 90 }, 
-                    { label: 'Equipment 16', result: 90 },
-                    { label: 'Equipment 17', result: 90 },
-                    { label: 'Equipment 18', result: 90 },
-                    { label: 'Equipment 19', result: 90 }, 
-                    { label: 'Equipment 20', result: 90 },
-                    { label: 'Equipment 21', result: 90 }, 
-                    //{ label: 'Equipment 22', result: 90 },
-                    //{ label: 'Equipment 23', result: 90 },
-                    //{ label: 'Equipment 24', result: 90 }
-                ],
-            ]
-        }
+        data={ [
+            [{ label: '2019-01-01', result: 50 }],
+            [{ label: '2019-01-01', result: 50 }],
+            [{ label: '2019-01-01', result: 50 }]
+        ] }
     />
 </Playground>
