readme route fixed, added gatsby optimized build command

--- a/src/docz/VerticalBarChart.mdx
+++ b/src/docz/VerticalBarChart.mdx
@@ -1,6 +1,6 @@
 ---
 name: Vertical bar charts
-route: vertical-bar-charts
+route: /vertical-bar-chart
 ---
 
 import VerticalBarChart from '../core/VerticalBarChart'
