fixed date formats, conversion real to hour

--- a/src/docz/AreaChart.mdx
+++ b/src/docz/AreaChart.mdx
@@ -17,20 +17,21 @@ import { Playground } from 'docz'
         lineMarkColor='#E65100'
         lineMakeName='mark'
         yComplement='%'
+        dateFormat={ 'yyyy-MM' }
         tooltipComplement='goals'
         tooltip={ { label: 'Data', result: 'MTBF' } }
         data={ 
             [ 
-                { label: '2019-01-01', result: 1 }, 
-                { label: '2019-02-01', result: 4 },
-                { label: '2019-03-01', result: 3 }, 
-                { label: '2019-04-01', result: 2 },
-                { label: '2019-05-01', result: 4 },
-                { label: '2019-06-01', result: 5 },
-                { label: '2019-07-01', result: 3 },
-                { label: '2019-08-01', result: 7 },
-                { label: '2019-09-01', result: 8 },
-                { label: '2019-10-01', result: 9 },
+                { label: '2019-01', result: 2.7514285714285713 }, 
+                { label: '2019-02', result: 4 },
+                { label: '2019-03', result: 3 }, 
+                { label: '2019-04', result: 2 },
+                { label: '2019-05', result: 4 },
+                { label: '2019-06', result: 5 },
+                { label: '2019-07', result: 3 },
+                { label: '2019-08', result: 7 },
+                { label: '2019-09', result: 8 },
+                { label: '2019-10', result: 9 },
             ] 
         }
     />
@@ -45,7 +46,7 @@ import { Playground } from 'docz'
         data={ 
             [ 
                 { label: '2019-01-01', result: 1.8 }, 
-                { label: '2019-02-01', result: 4 },
+                { label: '2019-02-01', result: 4.5 },
                 { label: '2019-03-01', result: 3 }, 
                 { label: '2019-04-01', result: 2 },
                 { label: '2019-05-01', result: 4 },
