change version, added examples

--- a/src/docz/StackedBarChart.mdx
+++ b/src/docz/StackedBarChart.mdx
@@ -55,6 +55,12 @@ import { Playground } from 'docz'
         yComplement='money'
         colors={ ['#487086', '#87C4CB', '#E97551'] }
         secondYAxisType='percent'
+        grid={ {
+                left: '12%',
+                right: '8%',
+                top: 60,
+                bottom: 60
+            } }
         tooltip={ { 
             label: 'Equipamento', 
             topResult: 'Aquisição',
@@ -62,10 +68,85 @@ import { Playground } from 'docz'
             lineResult: 'Custo % acumulado',
             complement: 'Custo total'
             } }
-        data={ [
-            [{ label: '2019-01-01', result: 50 }],
-            [{ label: '2019-01-01', result: 50 }],
-            [{ label: '2019-01-01', result: 50 }]
-        ] }
+        data={  [
+                [
+                    { label: 'a01', result: 1 }, 
+                    { label: 'a02', result: 2 },
+                    { label: 'a03', result: 4 }, 
+                    { label: 'a04', result: 5 },
+                    { label: 'a05', result: 6 },
+                    { label: 'a06', result: 7 },
+                    { label: 'a07', result: 11 }, 
+                    { label: 'a08', result: 42 },
+                    { label: 'a09', result: 54 }, 
+                    { label: 'a10', result: 55 },
+                    { label: 'a11', result: 66 },
+                    { label: 'a12', result: 87 },
+                    { label: 'a13', result: 1 }, 
+                    { label: 'a14', result: 2 },
+                    { label: 'a015', result: 4 }, 
+                    { label: 'a016', result: 5 },
+                    { label: 'a017', result: 6 },
+                    { label: 'a018', result: 7 },
+                    { label: 'a019', result: 11 }, 
+                    { label: 'a020', result: 42 },
+                    { label: 'a021', result: 54 }, 
+                    { label: 'a022', result: 55 },
+                    { label: 'a023', result: 66 },
+                    { label: 'a024', result: 87 }
+                ],
+                [ 
+                    { label: 'a01', result: 10 }, 
+                    { label: 'a02', result: 40 },
+                    { label: 'a03', result: 30 }, 
+                    { label: 'a04', result: 20 },
+                    { label: 'a05', result: 40 },
+                    { label: 'a06', result: 50 },
+                    { label: 'a07', result: 11 }, 
+                    { label: 'a08', result: 42 },
+                    { label: 'a09', result: 54 }, 
+                    { label: 'a10', result: 55 },
+                    { label: 'a11', result: 66 },
+                    { label: 'a12', result: 87 },
+                    { label: 'a13', result: 1 }, 
+                    { label: 'a14', result: 2 },
+                    { label: 'a015', result: 4 }, 
+                    { label: 'a016', result: 5 },
+                    { label: 'a017', result: 6 },
+                    { label: 'a018', result: 7 },
+                    { label: 'a019', result: 11 }, 
+                    { label: 'a020', result: 42 },
+                    { label: 'a021', result: 54 }, 
+                    { label: 'a022', result: 55 },
+                    { label: 'a023', result: 66 },
+                    { label: 'a024', result: 87 }
+                ],
+                [
+                    { label: 'a01', result: 11 }, 
+                    { label: 'a02', result: 42 },
+                    { label: 'a03', result: 54 }, 
+                    { label: 'a04', result: 55 },
+                    { label: 'a05', result: 66 },
+                    { label: 'a06', result: 87 },
+                    { label: 'a07', result: 11 }, 
+                    { label: 'a08', result: 42 },
+                    { label: 'a09', result: 54 }, 
+                    { label: 'a10', result: 55 },
+                    { label: 'a11', result: 66 },
+                    { label: 'a12', result: 87 },
+                    { label: 'a13', result: 1 }, 
+                    { label: 'a14', result: 2 },
+                    { label: 'a015', result: 4 }, 
+                    { label: 'a016', result: 5 },
+                    { label: 'a017', result: 6 },
+                    { label: 'a018', result: 7 },
+                    { label: 'a019', result: 11 }, 
+                    { label: 'a020', result: 42 },
+                    { label: 'a021', result: 54 }, 
+                    { label: 'a022', result: 55 },
+                    { label: 'a023', result: 66 },
+                    { label: 'a024', result: 87 }
+                ],
+            ]}
     />
 </Playground>
