add scroll on area and vertical bar charts, improves on vertical bar chart

--- a/src/docz/VerticalBarChart.mdx
+++ b/src/docz/VerticalBarChart.mdx
@@ -9,13 +9,11 @@ import { Playground } from 'docz'
 # Stacked bar chart example
 <Playground>
     <VerticalBarChart
-        color='green'
-        xType='time'
-        barWidth={ 100 }
         yComplement='%'
-        tooltip={ { label: 'Data', result: 'Disponibilidade' } }
-        data={[
-            { label: '2019-01-01', result: 50 } 
-        ]} 
+        xType='category'
+        yType='value'
+        color={ 'green' }
+        tooltip={ { label: 'Equipamento', result: 'Disponibilidade' } }
+        data={ [{ label: 'equip01', result: 50 }] } 
     />
 </Playground>
