add toolbox props on charts, types fixed

--- a/src/docz/AreaChart.mdx
+++ b/src/docz/AreaChart.mdx
@@ -16,6 +16,7 @@ import { Playground } from 'docz'
         lineMarkValue={ 3 }
         lineMarkColor='#E65100'
         lineMakeName='mark'
+        toolboxTooltip={ { saveAsImage: 'oi', dataView: 'olar' } } 
         yComplement='%'
         dateFormat={ 'yyyy-MM' }
         tooltipComplement='goals'
