moved title and toolbox, added crosshair, fixed width

--- a/src/docz/AreaChart.mdx
+++ b/src/docz/AreaChart.mdx
@@ -16,7 +16,8 @@ import { Playground } from 'docz'
         lineMarkValue={ 3 }
         lineMarkColor='#E65100'
         lineMakeName='mark'
-        toolboxTooltip={ { saveAsImage: 'oi', dataView: 'olar' } } 
+        title='mark'
+        toolboxTooltip={{ saveAsImage: 'aaaaaa' }}
         yComplement='%'
         dateFormat={ 'yyyy-MM' }
         tooltipComplement='goals'
@@ -33,6 +34,8 @@ import { Playground } from 'docz'
                 { label: '2019-08', result: 1 },
                 { label: '2019-09', result: 1 },
                 { label: '2019-10', result: 1 },
+                { label: '2019-11', result: 1 },
+                { label: '2019-12', result: 1 },
             ] 
         }
     />
