--- a/src/docz/VerticalBarChart.mdx
+++ b/src/docz/VerticalBarChart.mdx
@@ -13,7 +13,75 @@ import { Playground } from 'docz'
         xType='category'
         yType='value'
         color={ 'green' }
+        title='issso'
         tooltip={ { label: 'Equipamento', result: 'Disponibilidade' } }
-        data={ [{ label: 'equip01', result: 50 }] } 
+        data={ [
+  {
+    label: 'NG209',
+    result: '100',
+  },
+  {
+    label: 'NG210',
+    result: '100',
+    
+  },
+  {
+    label: 'NG205',
+    result: '100',
+    
+  },
+  {
+    label: '123123',
+    result: '100',
+    
+  },
+  {
+    label: 'NG 350',
+    result: '100',
+    
+  },
+  {
+    label: 'NG207',
+    result: '100',
+    
+  },
+  {
+    label: 'APT1',
+    result: '100',
+    
+  },
+  {
+    label: 'NG208',
+    result: '100',
+    
+  },
+  {
+    label: 'NG206',
+    result: '100',
+    
+  },
+  {
+    label: 'MAMP001',
+    result: '100',
+    
+  },
+  {
+    label: 'CONNECT 2.2',
+    result: '100',
+    
+  },
+  {
+    label: 'APT631',
+    result: '100',
+    
+  },
+  {
+    label: 'CONNECT 2.1 - CNC connect CVC512',
+    result: '100',
+    
+  }
+] } 
     />
 </Playground>
+
+
