improves on title and toolbox position

--- a/src/docz/StackedBarChart.mdx
+++ b/src/docz/StackedBarChart.mdx
@@ -11,6 +11,8 @@ import { Playground } from 'docz'
     <StackedBarChart
         xType='time'
         yComplement='money'
+        title='iOS'
+        toolboxTooltip={{ saveAsImage: 'save' }}
         colors={ ['#30D2D6', '#9F88FB', '#F09B1B'] }
         tooltip={ { 
             label: 'Período', 
