--- a/src/docz/VerticalBarChart.mdx
+++ b/src/docz/VerticalBarChart.mdx
@@ -13,7 +13,8 @@ import { Playground } from 'docz'
         xType='category'
         yType='value'
         color={ 'green' }
-        title='issso'
+        title='Bar Chart example'
+        toolboxTooltip={{ saveAsImage: 'save' }}
         tooltip={ { label: 'Equipamento', result: 'Disponibilidade' } }
         data={ [
   {
