remove label dispostion when have more than 50 vlaues on charts, remove datazoom to print, invert legend and scroll on all charts, expand example

--- a/src/docz/AreaChart.mdx
+++ b/src/docz/AreaChart.mdx
@@ -67,6 +67,8 @@ import { Playground } from 'docz'
 <Playground>
     <AreaChart 
         xType='time'
+        title='area chart data'
+        toolboxTooltip={{ saveAsImage: 'saving'}}
         tooltip={ { label: 'Data', result: 'O.S. em aberto' } }
         color='#E65100'
         data={ 
