change the size limit chars, take less bar values on charts

--- a/src/docz/VerticalBarChart.mdx
+++ b/src/docz/VerticalBarChart.mdx
@@ -81,6 +81,22 @@ import { Playground } from 'docz'
     result: '100',
     
   }
+  ,
+  {
+    label: 'APT63111',
+    result: '50',
+    
+  },
+  {
+    label: 'CONNECT 2.1 - CNC connect CVC51211',
+    result: '100',
+    
+  },
+  {
+    label: 'CONNECT 2.1 - CNC connect CVCaaa51211',
+    result: '100',
+    
+  }
 ] } 
     />
 </Playground>
