dynamic area chart top legend added

--- a/src/docz/AreaChart.mdx
+++ b/src/docz/AreaChart.mdx
@@ -103,6 +103,31 @@ import { Playground } from 'docz'
                 { label: '2019-09-28', result: 22 },
                 { label: '2019-09-29', result: 14 },
                 { label: '2019-09-30', result: 15 },
+                { label: '2019-10-01', result: 1 }, 
+                { label: '2019-10-02', result: 4 },
+                { label: '2019-10-03', result: 3 }, 
+                { label: '2019-10-04', result: 2 },
+                { label: '2019-10-05', result: 4 },
+                { label: '2019-10-06', result: 5 },
+                { label: '2019-10-07', result: 3 },
+                { label: '2019-10-08', result: 7 },
+                { label: '2019-10-09', result: 8 },
+                { label: '2019-10-10', result: 9 },
+                { label: '2019-10-11', result: 12 },
+                { label: '2019-10-12', result: 22 },
+                { label: '2019-10-13', result: 20 },
+                { label: '2019-10-14', result: 32 },
+                { label: '2019-10-15', result: 10 },
+                { label: '2019-10-16', result: 15 },
+                { label: '2019-10-17', result: 10 }, 
+                { label: '2019-10-18', result: 31 },
+                { label: '2019-10-19', result: 30 }, 
+                { label: '2019-10-20', result: 30 },
+                { label: '2019-10-21', result: 28 },
+                { label: '2019-10-22', result: 25 },
+                { label: '2019-10-23', result: 30 },
+                { label: '2019-10-24', result: 17 },
+                { label: '2019-10-25', result: 18 },
             ] 
         }
     />
