chore(new-charts): add LineChart component chart, add pie chart title

--- a/src/docz/PieChart.mdx
+++ b/src/docz/PieChart.mdx
@@ -14,6 +14,8 @@ import { Playground } from 'docz'
         colors={ ['blue', 'green', 'red', 'purple', 'black'] }
         legendPosition='inside'
         radius='55%'
+        toolboxTooltip={{ saveAsImage: 'saving'}}
+        title='pie chart'
         center={ ['40%', '50%'] }
         data={ 
             [ 
