chore(add-bar): add stacked extra bar to stacked bar chart

--- a/src/docz/StackedBarChart.mdx
+++ b/src/docz/StackedBarChart.mdx
@@ -6,7 +6,7 @@ route: /stacked-barchart
 import StackedBarChart from '../core/StackedBarChart'
 import { Playground } from 'docz'
 
-# Stacked bar chart example
+# Chart with 2 bars stacked and a line on top 
 <Playground>
     <StackedBarChart
         xType='time'
@@ -45,6 +45,60 @@ import { Playground } from 'docz'
                     { label: '2019-04-01', result: 55 },
                     { label: '2019-05-01', result: 66 },
                     { label: '2019-06-01', result: 87 }
+                ],
+            ]
+        }
+    />
+</Playground>
+
+# Chart with 3 bars stacked and a line on top
+<Playground>
+    <StackedBarChart
+        xType='time'
+        yComplement='money'
+        title='Custo por manutenção'
+        toolboxTooltip={{ saveAsImage: 'save' }}
+        colors={ ['#30D2D6', '#9F88FB', '#C5F3C2', '#F09B1B'] }
+        tooltip={ { 
+            label: 'Período', 
+            topResult: 'Preventivas',
+            bottomResult: 'Corretivas',
+            extraResult: 'Melhorias',
+            lineResult: 'Total'
+            } }
+        data={ 
+            [
+                [
+                    { label: '2019-01-01', result: 1 }, 
+                    { label: '2019-02-01', result: 2 },
+                    { label: '2019-03-01', result: 4 }, 
+                    { label: '2019-04-01', result: 5 },
+                    { label: '2019-05-01', result: 6 },
+                    { label: '2019-06-01', result: 7 }
+                ],
+                [ 
+                    { label: '2019-01-01', result: 10 }, 
+                    { label: '2019-02-01', result: 40 },
+                    { label: '2019-03-01', result: 30 }, 
+                    { label: '2019-04-01', result: 20 },
+                    { label: '2019-05-01', result: 40 },
+                    { label: '2019-06-01', result: 50 },
+                ],
+                [
+                    { label: '2019-01-01', result: 16 }, 
+                    { label: '2019-02-01', result: 46 },
+                    { label: '2019-03-01', result: 38 }, 
+                    { label: '2019-04-01', result: 60 },
+                    { label: '2019-05-01', result: 70 },
+                    { label: '2019-06-01', result: 94 }
+                ],
+                 [
+                    { label: '2019-01-01', result: 5 }, 
+                    { label: '2019-02-01', result: 4 },
+                    { label: '2019-03-01', result: 4 }, 
+                    { label: '2019-04-01', result: 5 },
+                    { label: '2019-05-01', result: 6 },
+                    { label: '2019-06-01', result: 7 }
                 ],
             ]
         }
