--- a/src/docz/StackedBarChart.mdx
+++ b/src/docz/StackedBarChart.mdx
@@ -105,6 +105,7 @@ import { Playground } from 'docz'
     />
 </Playground>
 
+# Chart with 2 bars stacked with pareto
 <Playground>
     <StackedBarChart
         sumDataValues
