chore(area-chart): add function and verification to take only 12 values on scrollabe chart

--- a/src/docz/AreaChart.mdx
+++ b/src/docz/AreaChart.mdx
@@ -21,7 +21,7 @@ import { Playground } from 'docz'
         yComplement='%'
         dateFormat={ 'yyyy-MM' }
         tooltipComplement='goals'
-        tooltip={ { label: 'Data', result: 'MTBF' } }
+        tooltip={ { label: 'Data', result: 'RAV' } }
         data={ 
             [ 
                 { label: '2019-01', result: 0.7514285714285713 }, 
@@ -36,6 +36,7 @@ import { Playground } from 'docz'
                 { label: '2019-10', result: 1 },
                 { label: '2019-11', result: 1 },
                 { label: '2019-12', result: 1 },
+                { label: '2020-01', result: 1 }
             ] 
         }
     />
