chore(forecast-area-chart): add types, component, example and internal functions to render the forecast area chart, fix some wrong examples on area chart

--- a/src/docz/AreaChart.mdx
+++ b/src/docz/AreaChart.mdx
@@ -17,7 +17,7 @@ import { Playground } from 'docz'
         lineMarkColor='#E65100'
         lineMakeName='mark'
         title='mark'
-        toolboxTooltip={{ saveAsImage: 'aaaaaa' }}
+        toolboxTooltip={{ saveAsImage: 'Save as image' }}
         yComplement='%'
         dateFormat={ 'yyyy-MM' }
         tooltipComplement='goals'
