--- a/src/docz/PictorialChart.mdx
+++ b/src/docz/PictorialChart.mdx
@@ -14,6 +14,7 @@ import { Playground } from 'docz'
         <PictorialChart
             grid={ { bottom: '10%' } }
             height={ 500 }
+            color='purple'
             tooltip={ { 
                 label: 'acidents', 
                 labelComplement: 10,
