chore(audiometry-chart): add Audiometry chart scope, add example, fix Horizontal Bar chart example

--- a/src/docz/HorizontalBarChart.mdx
+++ b/src/docz/HorizontalBarChart.mdx
@@ -6,7 +6,7 @@ route: /horizontal-barchart
 import HorizontalBarChart from '../core/HorizontalBarChart'
 import { Playground } from 'docz'
 
-# horizontal bar chart example
+# Horizontal bar chart example
 
 ## Demo
 <Playground>
