chore(audiometry): add title, toolbox, tooltip, symbols, and improve the code

--- a/src/docz/AudiometryChart.mdx
+++ b/src/docz/AudiometryChart.mdx
@@ -11,36 +11,38 @@ import { Playground } from 'docz'
 ## Demo
 <Playground>
     <div style={{ width: 600}}>
-    <AudiometryChart 
+        <AudiometryChart
+            title='left'   
             data={ [
                 { 
-                    result: 60,
+                    result: 60
                 },
                 {
-                    result: 50,
-                    symbolCondition: '<'
+                    result: 50
                 },
                 {
                     result: 60,
-                    symbolCondition: '<'
+                    boneResult: 50,
+                    boneSymbol: 'path://M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'
                 },       
                 {
                     result: 70,
-                    symbolCondition: '<'
+                    boneResult: 10,
+                    boneSymbol: 'path://M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'
                 },
                 {
                     result: 50,
-                    symbolCondition: '<'
+                    boneSymbol: 'path://M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'
                 },
                 {
                     result: 55,
-                    symbolCondition: '<'
+                    boneSymbol: 'path://M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z'
                 },
                 {
-                    result: 50,
+                    result: 50
                 },
                 {
-                    result: 10,
+                    result: 10
                 }
             ] }
         />
